exports[`test Index route 1`] = `
<div
  className="app-container">
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "body{margin: 0;
      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;}html{background: #eee;
      font-size: 100%;}@media (min-width: 550px){html{font-size: 120%;}}@media (min-width: 1200px){html{font-size: 140%;}}h1, h2, h3{font-weight: bold;}",
      }
    } />
  <header>
    <a
      href="#/"
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/users"
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/products"
      onClick={[Function]}
      style={Object {}}>
      Products
    </a>
    <a
      href="/products">
      Products (direct linkz)
    </a>
  </header>
  <div
    className="app-content">
    <div>
      <span>
        hello
      </span>
      <h1>
        Index Page
      </h1>
      <a
        href="http://passport.dev:8000/oauth/authorize?client_id=7&redirect_uri=http://consumer.dev:8010/callback&response_type=code&scope=read:products read:categories">
        <img
          alt="Login with Mystore.no"
          src="https://s3-eu-west-1.amazonaws.com/mystore-api-auth-app/assets/mystore-api-login-btn.jpg"
          style={
            Object {
              "height": "auto",
              "width": 360,
            }
          } />
      </a>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;

exports[`test NotFound route 1`] = `
<div
  className="app-container">
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "body{margin: 0;
      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;}html{background: #eee;
      font-size: 100%;}@media (min-width: 550px){html{font-size: 120%;}}@media (min-width: 1200px){html{font-size: 140%;}}h1, h2, h3{font-weight: bold;}",
      }
    } />
  <header>
    <a
      href="#/"
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/users"
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/products"
      onClick={[Function]}
      style={Object {}}>
      Products
    </a>
    <a
      href="/products">
      Products (direct linkz)
    </a>
  </header>
  <div
    className="app-content">
    <div>
      <span>
        hello
      </span>
      <h1>
        Index Page
      </h1>
      <a
        href="http://passport.dev:8000/oauth/authorize?client_id=7&redirect_uri=http://consumer.dev:8010/callback&response_type=code&scope=read:products read:categories">
        <img
          alt="Login with Mystore.no"
          src="https://s3-eu-west-1.amazonaws.com/mystore-api-auth-app/assets/mystore-api-login-btn.jpg"
          style={
            Object {
              "height": "auto",
              "width": 360,
            }
          } />
      </a>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;

exports[`test Users route 1`] = `
<div
  className="app-container">
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "body{margin: 0;
      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;}html{background: #eee;
      font-size: 100%;}@media (min-width: 550px){html{font-size: 120%;}}@media (min-width: 1200px){html{font-size: 140%;}}h1, h2, h3{font-weight: bold;}",
      }
    } />
  <header>
    <a
      href="#/"
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/users"
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      href="#/products"
      onClick={[Function]}
      style={Object {}}>
      Products
    </a>
    <a
      href="/products">
      Products (direct linkz)
    </a>
  </header>
  <div
    className="app-content">
    <div>
      <h1>
        Users Page
      </h1>
      <div>
        State inside the Users Container: 
        5
      </div>
      <hr />
      <div>
        Counter Component:
      </div>
      <div
        data-radium={true}>
        5
        <button
          data-radium={true}
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "backgroundColor": "#27AE60",
              "borderRadius": "3px",
              "color": "white",
              "fontFamily": "\'Helvetica Neue\', sans-serif",
              "padding": "5px",
              "position": "relative",
              "textAlign": "center",
              "width": "100%",
            }
          }>
          +
        </button>
      </div>
      <div
        data-radium={true}>
        5
        <button
          data-radium={true}
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "backgroundColor": "#0074D9",
              "borderRadius": "3px",
              "color": "white",
              "fontFamily": "\'Helvetica Neue\', sans-serif",
              "padding": "5px",
              "position": "relative",
              "textAlign": "center",
              "width": "100%",
            }
          }>
          +
        </button>
      </div>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;
